	* BUGFIX - Planar TIFF files with alpha now load properly
	* BUGFIX - Transparency in indexed TGA files is now read properly
	* BUGFIX - Failed operations now do not flag image as modified
	* BUGFIX - Gradient colours are now properly updated after converting indexed image to RGB
	* BUGFIX - Cut operation in gradient mode when no placement exists now draws shapeburst gradient as it should
	* BUGFIX - Builtin file selector now properly handles manual edits in directory box
	* BUGFIX - Problem with FreeType text dialog occasionally hiding behind main window is now eliminated
	* BUGFIX - FreeType text renderer now can handle PCF bitmap fonts
	* BUGFIX - FreeType text renderer now properly handles TTF fonts with embedded bitmaps
	* BUGFIX - FreeType text renderer now doesn't mistake some Unicode fonts for non-Unicode
	* BUGFIX - Redraw lag when moving a dialog over main window in Windows is now greatly reduced (fixed in GTK+)
	* BUGFIX - Ctrl+T key now draws selection outline as it should - keyboard shortcut for text tool is now Shift+T
	* BUGFIX - Handbook installed into a path with spaces in it no longer fails to open in nondefault browser on Windows
	* BUGFIX - Internationalization no longer fails on Windows when the current directory is not the installation directory
	* BUGFIX - Redraw glitches in builtin file selector on Windows are now eliminated
	* "Distance to A+B" palette sort mode removed due to utter uselessness

3.31	2009-4-15

	* Japanese translation updated by Norihiro YONEDA
	* Swedish translation updated by Daniel Nylander and Fredrik Forsmo
	* French translation updated by Plume
	* Builtin file selector uses stock file and directory icons on GTK+2
	* Default settings are loaded from file /etc/mtpaint/mtpaintrc if it exists
	* BUGFIX - Compilation with GTK+ colour selector now works
	* BUGFIX - Escape key now works properly in builtin file selector in GTK+1
	* BUGFIX - Filename length in builtin file selector no longer is limited to 100 characters