@@ -380,6 +380,12 @@ char *resolve_path(char *buf, int buflen, char *path);
 int wjfnmatch(const char *mask, const char *str, int utf);
 #endif
 
+// Replace '/' path separators
+
+#ifdef WIN32
+void reseparate(char *str);
+#endif
+
 // Prod the focused spinbutton, if any, to finally update its value
 
 void update_window_spin(GtkWidget *window);
